--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,17 @@ jobs:
       os: linux
       before_script: npm run lint || exit 1;
       after_success: npm run-script coverage;
+    - stage: test
+      node_js: "node"
+      os: linux-ppc64le
+      before_script: npm run lint || exit 1;
+      after_success: npm run-script coverage;
     - stage: platform-test
       node_js: "node"
       os: osx
+    - stage: platform-test
+      node_js: "9"
+      os: linux-ppc64le
     - stage: platform-test
       node_js: "9"
       os: linux
