--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
 jobs:
   include:
     - stage: test
-      node_js: "node"
+      node_js: "10"
       os: linux
       before_script: npm run lint || exit 1;
       after_success: npm run-script coverage;
