--- a/.travis.yml
+++ b/.travis.yml
@@ -62,8 +62,8 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - gcc-4.7
-      - g++-4.7
+#      - gcc-4.7
+#      - g++-4.7
       - gcc-4.9
       - g++-4.9
 
